# tui-game

./: .gitignore  CMakeLists.txt  README.md  main.c  makefile  struct.h
cfg/: app.cfg  app_ccz.cfg  app_tetris.cfg  config.cfg  game.cfg  game_ccz.cfg  game_tetris.cfg  role.cfg
common-lib/: data_handle.c  data_handle.h  fm_socket.c  fm_socket.h  makefile  ofdm_common.c  ofdm_common.h
lib/: CMakeLists.txt  common.h  data_handle.c  data_handle.h  log.c  log.h  tg_log.c  tg_log.h  tg_queue.c  tg_queue.h  tg_time.c  tg_time.h  tui.c  tui.h
src/: CMakeLists.txt  app-context.c  app-context.h  app-init.c  app-init.h  app-tui.c  app-tui.h  app.c  app.h  main.c  struct.h
src/ccz/: CMakeLists.txt  app-context.c  app-context.h  app-init.c  app-init.h  app-tui.c  app-tui.h  app.c  main.c
src/greedy-snake/: CMakeLists.txt  app-2.c  app.c  main.c
src/tetris/: CMakeLists.txt  app-context.c  app-context.h  app-init.c  app-init.h  app-tui.c  app-tui.h  app.c  app.h  main.c
